--- a/lab8/CMakeLists.txt
+++ b/lab8/CMakeLists.txt
@@ -4,4 +4,4 @@ project(lab8 C)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
 
-add_executable(lab8 main.c)
+add_executable(lab8 main3.c)
